samples/blue-green/diamond/ingress/DiamondWeb.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diamondweb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diamondweb
  template:
    metadata:
      labels:
        app: diamondweb
    spec:
      containers:
      - name: diamondweb
        image: k8s.gcr.io/e2e-test-images/echoserver:2.3
        ports:
        - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: diamondweb
  labels:
    app: diamondweb
spec:
  ports:
  - port: 80
    targetPort: 8080
    protocol: TCP
    name: http
  selector:
    app: diamondweb
